@@ -1,3 +1,6 @@
+2019-03-04  7.0.8-31 Cristy  <quetzlzacatenango@image...>
+  * -trim is no longer sensitive to the image virtual canvas.
+
 2019-03-03  7.0.8-30 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.8-30, GIT revision 15376:16d2b4e6a:20190303
 
